src/alto-ui/Alert/Alert.scss
@import '../scss/_inc';

$alert-height: 2.5rem;
$alert-text-line-height: 1.2rem;
$alert-text-margin-top: $alert-height / 2 - $alert-text-line-height / 2;

@mixin alert-color($color-bkgd, $color-text, $color-brdr) {
  background: $color-bkgd;
  border: 1px solid $color-brdr;
  color: $color-text;
}

.Alert {
  @include alert-color($blue-10, $blue-70, $blue);
  display: flex;
  align-items: flex-start;
  padding: 0 $spacing-small;
  border-radius: $border-radius-default;
  min-height: $alert-height - $alert-text-margin-top;

  & + & {
    margin-top: $spacing-medium;
  }
}

.Alert--success {
  @include alert-color($green-10, $green-70, $green);
}

.Alert--error {
  @include alert-color($red-10, $red, $red);
}

.Alert--warning {
  @include alert-color($orange-10, $orange-80, $orange);
}

.Alert--filled {
  @include alert-color($blue, $white, $blue);

  &.Alert--success {
    @include alert-color($green, $white, $green);
  }

  &.Alert--error {
    @include alert-color($red, $white, $red);
  }

  &.Alert--warning {
    @include alert-color($purple, $white, $purple);
  }
}

.Alert__icon,
.Alert__close {
  transform: translateY(calc(#{$alert-height / 2} - 50%));
}

.Alert__icon {
  font-size: $font-size-x-large;
  margin-right: $spacing-x-small;
}

.Alert__message {
  flex: 1;
  padding: $alert-text-margin-top $spacing-x-small;
}

.Alert__close {
  font-size: $font-size-large;
  opacity: 1;
}

